# practica6eedd

./: CMakeLists.txt  Casilla.h  Coche.cpp  Coche.h  MallaRegular.h  PuntoRecarga.cpp  Reanelcar.cpp  Reanelcar.h  ThashUsuario.h  Trayecto.cpp  UTM.cpp  UTM.h  Usuario.cpp  analisis_Thash.md  destino.csv  fecha.cpp  fecha.h  img.cpp  img.h  main.cpp  puntos_recarga.csv
