cmake_minimum_required(VERSION 3.27.8)
project(Pr4_VillegasAceituno_Manuel)

set(CMAKE_CXX_STANDARD 20)

add_executable(Pr4_VillegasAceituno_Manuel
        main.cpp
        Coche.cpp
        fecha.cpp
        PuntoRecarga.cpp
        Reanelcar.cpp
        Usuario.cpp
        UTM.cpp
        UTM.h
        Trayecto.cpp
        ThashUsuario.h
)
